Removed dependency on perl; now uses sed

--- a/build
+++ b/build
@@ -6,7 +6,7 @@ for dir in *; do
   if [[ -d $dir ]]; then
     for file in $dir/*; do
 	file=$(basename $file)
-	cat definitions $dir/$file |gpp -T|perl -ne 'print if /./' > ../$dir/$file
+	cat definitions $dir/$file |gpp -T|sed '/^\s*$/d' > ../$dir/$file
     done
   fi
 done
